--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,9 @@ img {
   padding-left: 15px;
   padding-right: 15px;
 }
+/* .container-hero {
+  background-image: url(../images/hero/bg.jpg);
+} */
 
 .visually-hidden {
   position: absolute;
@@ -175,6 +178,12 @@ img {
   color: #ffffff;
   background-color: var(--secondary-bg-color);
   text-align: center;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero/bg.jpg);
+  background-size: cover;
 }
 
 .hero-title {
@@ -321,6 +330,28 @@ img {
   background: var(--primary-color);
   flex-basis: calc((100% - 72px) / 4);
 }
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+
+.social-list-icon {
+  fill: #f4f4fd;
+}
+/* .................footer................ */
 .address-footer {
   padding: 100px 0;
   background: var(--secondary-bg-color);
@@ -337,10 +368,6 @@ img {
   padding-top: 96px;
   padding-bottom: 120px;
 }
-
-/* .container-portfolio {
-  padding: 32px 16px;
-} */
 
 .gallery {
   display: flex;
