--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,6 @@ img {
 .section-about {
   padding-bottom: 120px;
 }
-
 .cart-about {
   flex-basis: calc((100% - 48px) / 3);
 }
@@ -393,20 +392,10 @@ img {
   stroke: var(--accent-pressed-state);
 }
 
-/* .section-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-  border-radius: 0px 0px 4px 4px;
-} */
-
-/* .card-bg {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;
-  background: var(--primary-color);
-  flex-basis: calc((100% - 72px) / 4);
-} */
+.section-customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 
 /* ................................footer............................. */
 .address-footer {
